# polymarket-researcher

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  collect.py  polymarket-researcher-TODO.md  pyproject.toml
collector/: models.py  oracle_consumer.py  outcome_recorder.py  pm_clob_consumer.py  pm_market_discovery.py
db/: connection.py  migrate.py  schema.sql
scripts/: backfill_markets.py  data_quality.py
